# ollama-text-gateway

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.postgres.local.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: config.py  exceptions.py  logger_config.py  main.py  metrics.py  ollama_client.py  prompt_builder.py  prompts.py  schemas.py
app/db/: base.py  db.py  session.py
app/routers/: health.py  ollama.py
app/services/: ollama.py  request_statuses.py
infra/: docker-compose.ollama.yml  docker-compose.postgres.yml
tests/: test_health.py  test_integration.py  test_main.py  test_ollama.py
